--- a/views/admin/addSubject.ejs
+++ b/views/admin/addSubject.ejs
@@ -2,7 +2,7 @@
     <%- include('../partials/navbar.ejs') %>
     <section class="content">
         <h1 class="heading">Add Subject</h1>
-        <form action="/admin/add-subject"  method="POST">
+        <form action="/admin/add-subject"  method="POST" enctype="multipart/form-data">
             <input type="text" name="title" placeholder="title">
             <input type="file" name="posterImage">
             <button type="submit">submit</button>
