--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,17 +1,25 @@
 <%- include('./partials/header.ejs') %>
     <%- include('./partials/navbar.ejs') %>
     <section class="content">
+        <% if(error) { %>
+            <div class="error">
+                please reload the window or contact support 
+            </div>
+        <% } else { %>
         <h1 class="heading">Subjects</h1>
-        <ul>
-            <li>
-                <figure>
-                    <img src="/images/vk-mehta.png" alt="">
-                    <figcaption>
-                        <h2>Analog Circuits</h2> <!-- we will fill the link with mongodb id. localhost:8080/subject?=id -->
-                        <p>2nd Year, 3rd Semester</p>
-                    </figcaption>
-                </figure>
-            </li>
-        </ul>
+            <ul>
+                <% docs.forEach(subject => { %>
+                    <li>
+                        <figure>
+                            <img src="<%= subject.imageUrl %>" alt="">
+                            <figcaption>
+                                <h2><%= subject.title %></h2> <!-- we will fill the link with mongodb id. localhost:8080/subject?=id -->
+                                <p>2nd Year, 3rd Semester</p> <!-- get this data from admin -->
+                            </figcaption>
+                        </figure>
+                    </li>
+                <% }) %>
+            </ul>
+        <% } %>
     </section>
 <%- include('./partials/footer.ejs') %>
