--- a/views/admin/addSubject.ejs
+++ b/views/admin/addSubject.ejs
@@ -5,6 +5,11 @@
         <form action="/admin/add-subject"  method="POST" enctype="multipart/form-data">
             <input type="text" name="title" placeholder="title">
             <input type="file" name="posterImage">
+            <select type="number" name="semester">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+            </select>
             <button type="submit">submit</button>
         </form>
     </section>
