Backend Code For Add Subject Route Completed

--- a/views/admin/addSubject.ejs
+++ b/views/admin/addSubject.ejs
@@ -5,10 +5,15 @@
         <form action="/admin/add-subject"  method="POST" enctype="multipart/form-data">
             <input type="text" name="title" placeholder="title">
             <input type="file" name="posterImage">
-            <select type="number" name="semester">
+            <select name="semester">
                 <option>1</option>
                 <option>2</option>
                 <option>3</option>
+                <option>4</option>
+                <option>5</option>
+                <option>6</option>
+                <option>7</option>
+                <option>8</option>
             </select>
             <button type="submit">submit</button>
         </form>
