--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
             <ul>
                 <% docs.forEach(subject => { %>
                     <li>
-                        <a href="/subject/<%= subject.contentId %>">
+                        <a href="/subject/<%= subject.contentID %>">
                                 <figure>
                                         <img src="<%= subject.imageUrl %>" alt="">
                                         <figcaption>
