--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,11 +1,5 @@
 
     <nav>
-            <ul class="flex">
-                <li>
-                    <p><a href="/" class="logo">E-Botes</a></p>
-                </li>
-                <li style="margin-left: auto">
-                    <p>Download EBooks, ENotes, etc.</p>
-                </li>
-            </ul>
-        </nav>
+        <a href="/" id="logo"> <img src="/icons/library_64.png" style="vertical-align: bottom;" alt="" srcset=""> E-Library</a>
+        <a class="right subtext"> download ebooks, enotes, and previous exam papers</a>
+    </nav>
