--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>EBotes - EBooks And ENotes online Library</title>
+    <title>JH Online Library</title>
     <link rel="stylesheet" href="/style.css">
 </head>
 <body> 
