--- a/views/subject_content.ejs
+++ b/views/subject_content.ejs
@@ -9,7 +9,7 @@
         <section class="content">
 
 
-            <h1 class="heading">EBooks</h1>
+            <h1 class="heading"> <img src="/icons/book_64.png"> EBooks</h1>
             
             <% if (content.ebooks.length > 0) { %>
             
@@ -17,12 +17,12 @@
 
                     <% content.ebooks.forEach(ebook => { %>
                         <li>
-                            <figure>
+                            <figure class="figure-content">
                                 <img src="/icons/ebook.png" alt="<%= ebook.title %>"> 
                                 <figcaption>
                                     <h2><%= ebook.title %></h2> 
                                     <p>
-                                        <a href="<%= ebook.path %>">
+                                        <a class="download-button" href="<%= ebook.path %>">
                                             Download
                                         </a>
                                     </p>
@@ -34,7 +34,7 @@
                 </ul>
             <% } else { %>
             
-                <p>No Ebooks as of now for this subject</p>
+                <p class="subtext">No Ebooks as of now for this subject</p>
             
             <% } %>
         
@@ -44,7 +44,7 @@
         <section class="content">
 
 
-                <h1 class="heading">ENotes</h1>
+                <h1 class="heading">  <img src="/icons/notes_64.png"> ENotes</h1>
 
                 <% if (content.enotes.length > 0) { %>
             
@@ -52,12 +52,12 @@
     
                         <% content.enotes.forEach(enote => { %>
                             <li>
-                                <figure>
+                                <figure class="figure-content">
                                     <img src="/icons/enotes.png" alt="<%= enote.title %>"> 
                                     <figcaption>
                                         <h2><%= enote.title %></h2> 
                                         <p>
-                                            <a href="<%= enote.path %>">
+                                            <a class="download-button" href="<%= enote.path %>">
                                                 Download
                                             </a>
                                         </p>
@@ -69,7 +69,7 @@
                     </ul>
                 <% } else { %>
                 
-                    <p>No E-Notes as of now for this subject</p>
+                    <p class="subtext">No E-Notes as of now for this subject</p>
                 
                 <% } %>
             
@@ -78,7 +78,7 @@
         <section class="content">
 
 
-                <h1 class="heading">Previous Exam Papers</h1>
+                <h1 class="heading">  <img src="/icons/papers_64.png"> Previous Exam Papers</h1>
 
                 <% if (content.papers.length > 0) { %>
             
@@ -86,13 +86,13 @@
     
                         <% content.papers.forEach(paper => { %>
                             <li>
-                                <figure>
+                                <figure class="figure-content">
                                     <img src="/icons/epaper.png" alt="<%= paper.title %>"> 
                                     <figcaption>
                                         <h2><%= paper.title %></h2> 
                                         
                                         <p>
-                                            <a href="<%= paper.path %>">
+                                            <a class="download-button" href="<%= paper.path %>">
                                                 Download
                                             </a>
                                         </p>
@@ -104,7 +104,7 @@
                     </ul>
                 <% } else { %>
                 
-                    <p>No Previous Year Exam Papers as of now for this subject</p>
+                    <p class="subtext">No Previous Year Exam Papers as of now for this subject</p>
                 
                 <% } %>
             
