--- a/views/admin/addSubjectContent.ejs
+++ b/views/admin/addSubjectContent.ejs
@@ -13,7 +13,7 @@
             <br><br>
             <form action="/admin/add-subject-content" class="form" method="POST">
                 
-                <input type="hidden" value="" id="content" name="filesMetdaData">
+                <input type="hidden" value="" id="content" name="filesMetaData">
                 <select name="subjectID">
                     <option> Select Subject </option>
                     <% docs.forEach((doc) => {  %>
