--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,12 @@
 
-    
+        <div class="push"></div>
+    </div>
+
+    <div class="footer">
+
+            <p>email your notes to us and we will upload them within 1.5 hour - jh-library@gmail.com</p>
+
+    </div>
 
 </body>
 </html>
