--- a/public/style.css
+++ b/public/style.css
@@ -217,3 +217,13 @@ figure > figcaption > p {
     }
 
 }
+
+
+/*Mobile Content CSS*/
+.mobile-content h1 img{
+    vertical-align: middle;
+}
+
+.mobile-content ul{
+    list-style: none;
+}
