--- a/views/subject_content.ejs
+++ b/views/subject_content.ejs
@@ -25,7 +25,7 @@
                             <figure class="figure-content">
                                 <img src="/icons/ebook.png" alt="<%= ebook.title %>">
                                 <figcaption>
-                                    <h2><%= ebook.title %></h2>
+                                    <h2><%= ebook.name %></h2>
                                     <p>
                                         <a class="download-button" href="<%= ebook.path %>">
                                             Download
@@ -60,7 +60,7 @@
                                 <figure class="figure-content">
                                     <img src="/icons/enotes.png" alt="<%= enote.name %>">
                                     <figcaption>
-                                        <h2><%= enote.title %></h2>
+                                        <h2><%= enote.name %></h2>
                                         <p>
                                             <a class="download-button" href="<%= enote.path %>">
                                                 Download
@@ -94,7 +94,7 @@
                                 <figure class="figure-content">
                                     <img src="/icons/epaper.png" alt="<%= paper.name %>">
                                     <figcaption>
-                                        <h2><%= paper.title %></h2>
+                                        <h2><%= paper.name %></h2>
 
                                         <p>
                                             <a class="download-button" href="<%= paper.path %>">
